--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/randomcolor": "^0.5.9",
     "chart.js": "^4.4.3",
     "randomcolor": "^0.6.2",
     "react": "^18.3.1",
